[gd_scene load_steps=4 format=3 uid="uid://c818maxo7ewrh"]

[ext_resource type="ArrayMesh" uid="uid://pwg71p01dmi0" path="res://Assets/Tiles/wall.obj" id="1_73kma"]
[ext_resource type="Script" path="res://Scripts/Map/tile.gd" id="1_snoem"]

[sub_resource type="BoxShape3D" id="BoxShape3D_jaxn3"]
size = Vector3(1, 0, 1)

[node name="Tile" type="MeshInstance3D"]
mesh = ExtResource("1_73kma")
script = ExtResource("1_snoem")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_jaxn3")

[node name="Icon" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
layers = 2

[connection signal="input_event" from="." to="." method="click_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
